# bilingual-language-learning

./: .dockerignore  README.md  pyproject.toml
.github/: CODEOWNERS
bll/: __init__.py  bootstrap.py  cli.py  db.py  gloss.py  jmdict.py  jp.py  timeline.py  web.py
bll/static/: index.html
deploy/: Dockerfile  bll-align.Modelfile  compose.yaml  entrypoint.sh
tests/: test_backend_default.py  test_backend_gate.py  test_heteronym_reading.py
